--- a/views/setting/index.html
+++ b/views/setting/index.html
@@ -47,7 +47,7 @@
         <!-- ============= Navigation ============= -->
         <header class="nav">
             <div><a href="../../index.html">Home</a></div>
-            <div><a href="../todos">Todos</a></div>
+            <div><a href="../todos/">Todos</a></div>
             <div><a href="" data-active="true">Setting</a></div>
         </header>
 
