Fix routing issue with DigitalOcean

--- a/views/todos/index.html
+++ b/views/todos/index.html
@@ -49,7 +49,7 @@
         <header class="nav">
             <div><a href="../../index.html">Home</a></div>
             <div><a href="" data-active="true">Todos</a></div>
-            <div><a href="../setting/">Setting</a></div>
+            <div><a href="../setting/index.html">Setting</a></div>
         </header>
 
         <!-- ============= Main Content ============= -->
